fix overflow bug in Linux browsers/Safari

--- a/demo/src/styles/MetricsUI.scss
+++ b/demo/src/styles/MetricsUI.scss
@@ -1,7 +1,7 @@
 /* Metrics branding */
 
 html, body {
-  height:100%;
+  min-height:100%;
 }
 
 body {
@@ -74,15 +74,19 @@ body {
 }
 
 .content {
-  width:calc(100%);
+  width:100%;
   background-color: #FFF;
   margin:0 auto;
   box-shadow:2px 2px 25px 0px #333;
   flex-grow:1;
+  display: flex;
+  flex-direction:column;
 }
 
 .content-bg {
   padding:30px;
+  flex-grow:1;
+  display: block;
 }
 
 @media only screen and (min-width : 650px) {
